<resources>
    <string name="app_name">My Application</string>
    <string name="the_sum_of_numbers_from_1_to_is">The sum of numbers from 1 to %1$d is: %2$s</string>
    <string name="error_invalid_number">Error: Invalid number</string>
    <string name="calculate">Calculate</string>
</resources>
